Fix mobile menu and empty lists on mobile

--- a/src/sass/_list.scss
+++ b/src/sass/_list.scss
@@ -76,6 +76,10 @@
     border-color: #eee !important;
   }
 
+  .list > li.list-empty {
+    display: block !important;
+  }
+
   .list > li > a {
     display: block !important;
     font-size: 110%;
